// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutPage should have english text 1`] = `
<div>
  <h2>
    Data Catalog
  </h2>
  <br />
  <br />
  <p>
    Data Catalog.
  </p>
  <br />
  <br />
</div>
`;

exports[`AboutPage should have norwegian text 1`] = `
<div>
  <h2>
    Datakatalog
  </h2>
  <br />
  <br />
  <p>
    Datakatalog.
  </p>
  <br />
  <br />
</div>
`;
